Added API request for Guests
